# Open-Vehicle-Monitoring-System-3

vehicle/OVMS.V3/: README.md
vehicle/OVMS.V3/components/esp32bluetooth/: CMakeLists.txt
vehicle/OVMS.V3/components/esp32bluetooth/src/: esp32bluetooth.cpp  esp32bluetooth_app_console.cpp  esp32bluetooth_app_console.h  esp32bluetooth_app_device.cpp  esp32bluetooth_app_device.h  esp32bluetooth_app_metrics.cpp  esp32bluetooth_app_metrics.h  esp32bluetooth_app_tucar.cpp  esp32bluetooth_app_tucar.h  esp32bluetooth_gap.cpp  esp32bluetooth_gap.h  esp32bluetooth_gatts.cpp  esp32bluetooth_gatts.h
vehicle/OVMS.V3/components/ovms_cellular/src/: ovms_cellular.cpp  ovms_cellular.h
vehicle/OVMS.V3/components/ovms_server_v3/src/: ovms_server_v3.cpp  ovms_server_v3.h
vehicle/OVMS.V3/components/simcom/src/: simcom_5360.cpp  simcom_7000.cpp  simcom_7600.cpp
vehicle/OVMS.V3/components/vehicle/: vehicle.cpp
vehicle/OVMS.V3/components/vehicle_dongfeng_e60/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/vehicle_dongfeng_e60/docs/: index.rst
vehicle/OVMS.V3/components/vehicle_interface_tucar/: CMakeLists.txt
vehicle/OVMS.V3/components/vehicle_interface_tucar/src/: vehicle_interface_tucar.cpp  vehicle_interface_tucar.h
vehicle/OVMS.V3/components/vehicle_kianirosg2/: CMakeLists.txt
vehicle/OVMS.V3/components/vehicle_neta_aya/: CMakeLists.txt
vehicle/OVMS.V3/main/: Kconfig  metrics_standard.cpp  metrics_standard.h  ovms_config.cpp  ovms_events.cpp  ovms_housekeeping.cpp  ovms_main.cpp  ovms_module.cpp  ovms_netmanager.cpp
vehicle/OVMS.V3/support/: a2l
(+11 files in other folders)
